# gfx

./: .gitmodules  LICENSE
src/: CMakeLists.txt  Engine.cpp  Engine.h  GlobalRegistry.cpp  GlobalRegistry.h  ProtectedID.h  Scene.cpp  Scene.h  Scene_TexturedCube.cpp  Scene_TexturedCube.h  Scene_TexturedTriangle.cpp  Scene_TexturedTriangle.h  Scene_Triangle.cpp  Scene_Triangle.h  interface_FileSystem.cpp  interface_FileSystem.h  interface_Logger.cpp  interface_Logger.h
src/data/shaders/: scene_textured_cube.vs  scene_textured_triangle.fs  scene_textured_triangle.vs  scene_triangle.fs  scene_triangle.vs
src/gfx/: GFXCore.h  GFXShader.cpp  GFXShader.h  GFXTexture2D.cpp  GFXTexture2D.h
src/platform/desktop/: CMakeLists.txt  desktop_FileSystem.cpp  desktop_FileSystem.h  desktop_Logger.cpp  desktop_Logger.h  main.cpp
src/platform/desktop/lib/glad/: CMakeLists.txt
src/platform/desktop/lib/glad/include/glad/: glad.h
src/platform/desktop/lib/glad/src/: glad.c
